@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed glibc 2.10 compiler problems (Fedora 11 and others)
+	  with scandir() and strchr() (STR #2222)
 	- Corrected const methods of Fl_Text_{Buffer|Display|Selection}
 	  to be declared const, corrected an Fl_Text_Buffer attrib. typo
 	- Fixed OpenGL shared context handling (STR #2135)
